# course_2_term_1_lab_8

./: CMakeLists.txt  README.md  actions.cpp  actions.h  main.cpp
_tests/: Actions.test.cpp  CMakeLists.txt
